--- a/src/ultimatettt/gui/view/StartWindow.fxml
+++ b/src/ultimatettt/gui/view/StartWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -10,25 +11,34 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/startwindow.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.StartWindowController">
    <children>
-      <VBox layoutX="120.0" layoutY="44.0" prefHeight="312.0" prefWidth="388.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="40.0">
+      <StackPane layoutX="65.0" layoutY="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <StackPane prefHeight="150.0" prefWidth="200.0">
+            <VBox alignment="CENTER" StackPane.alignment="CENTER">
                <children>
-                  <Label id="lblTitle" text="ULTIMATE TIC TAC TOE">
+                  <Label id="lblTitle" text="ULTIMATE TIC TAC TOE" textFill="BLUE">
                      <font>
-                        <Font name="Cambria" size="36.0" />
+                        <Font name="Luckiest Guy Regular" size="36.0" />
                      </font>
                   </Label>
+                  <Label text="Choose Game Mode:" textFill="RED">
+                     <font>
+                        <Font name="Luckiest Guy Regular" size="24.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <JFXButton fx:id="btnPVP" buttonType="RAISED" onAction="#playPVP" text="Human VS Human" textAlignment="CENTER" />
+                        <JFXButton buttonType="RAISED" text="Human VS AI" textAlignment="CENTER">
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                        <JFXButton buttonType="RAISED" text="AI VS AI" textAlignment="CENTER" />
+                     </children>
+                  </HBox>
                </children>
-            </StackPane>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <JFXButton fx:id="btnPVP" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#playPVP" prefHeight="10000.0" prefWidth="10000.0" text="Human VS Human" />
-                  <JFXButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="10000.0" prefWidth="10000.0" text="Human VS AI" />
-                  <JFXButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="10000.0" prefWidth="10000.0" text="AI VS AI" />
-               </children>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
+      </StackPane>
    </children>
 </AnchorPane>
