--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : Szymon
 */
 
-#grid1 {
-    -fx-border-color: black;
-    -fx-border-width: 1;
+#bigGrid {
+    -fx-grid-lines-visible: true;
+    
 }
