--- a/src/ultimatettt/gui/css/startwindow.css
+++ b/src/ultimatettt/gui/css/startwindow.css
@@ -8,12 +8,20 @@ and open the template in the editor.
     Author     : mads_
 */
 
-#lblTitle{
+
+
+#lblTitle .text{
+    -fx-fill: #50ff00;
+    -fx-stroke: black;
+    -fx-stroke-width: 2;
     
-    -fx-stroke: red;
-    -fx-stroke-width: 1;
 }
 
+#lblGameMode .text{
+    -fx-fill: #00ffff;
+    -fx-stroke: black;
+    -fx-stroke-width: 2;
+}
 
 .button{
     -fx-wrap-text: true;
@@ -21,8 +29,8 @@ and open the template in the editor.
     -fx-font-family: 'Luckiest Guy', cursive;
     -fx-border-color: black;
     -fx-border-width: 5;
-    -fx-border-radius: 20;
-    -fx-background-color: greenyellow;
+    -fx-border-radius: 15;
+    -fx-background-color: #50ff00;
     -fx-background-radius: 22;
 }
 
