--- a/src/ultimatettt/gui/view/StartWindow.fxml
+++ b/src/ultimatettt/gui/view/StartWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/startwindow.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.StartWindowController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/startwindow.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.StartWindowController">
    <children>
       <StackPane layoutX="65.0" layoutY="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -31,12 +31,12 @@
                   <HBox alignment="CENTER">
                      <children>
                         <JFXButton fx:id="btnPVP" buttonType="RAISED" onAction="#playPVP" text="Human VS Human" textAlignment="CENTER" />
-                        <JFXButton buttonType="RAISED" text="Human VS AI" textAlignment="CENTER">
+                        <JFXButton buttonType="RAISED" onAction="#playPVE" text="Human VS AI" textAlignment="CENTER">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
                         </JFXButton>
-                        <JFXButton buttonType="RAISED" text="AI VS AI" textAlignment="CENTER" />
+                        <JFXButton buttonType="RAISED" onAction="#playBots" text="AI VS AI" textAlignment="CENTER" />
                      </children>
                   </HBox>
                </children>
