--- a/src/ultimatettt/gui/view/Main.fxml
+++ b/src/ultimatettt/gui/view/Main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="500.0" style="-fx-background-color: #73676B;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="500.0" style="-fx-background-color: #73676B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
    <children>
       <AnchorPane layoutY="71.0" prefHeight="500.0" prefWidth="500.0">
          <children>
@@ -926,7 +926,7 @@
       </AnchorPane>
       <AnchorPane layoutY="2.0" prefHeight="63.0" prefWidth="500.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutY="8.0" prefHeight="47.0" prefWidth="212.0" text="Player vs Player">
+            <Label fx:id="mainLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="8.0" prefHeight="47.0" prefWidth="212.0" text="Player vs Player">
                <font>
                   <Font size="27.0" />
                </font>
