--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -7,8 +7,21 @@ and open the template in the editor.
     Created on : 25-Feb-2019, 10:54:50
     Author     : Szymon
 */
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
 
 #bigGrid {
     -fx-grid-lines-visible: true;
-    
+}
+
+#bigGrid Line{
+    -fx-stroke: #50ff00;
+}
+
+#mainAnchor{
+    -fx-background-color: #303030;
+}
+
+.label{
+    -fx-font-family: 'Luckiest Guy', cursive;
+    -fx-text-fill: #50ff00;
 }
