--- a/src/ultimatettt/gui/view/Main.fxml
+++ b/src/ultimatettt/gui/view/Main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="500.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="500.0" style="-fx-background-color: #73676B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.view.MainController">
    <children>
       <AnchorPane layoutY="71.0" prefHeight="500.0" prefWidth="500.0">
          <children>
@@ -941,7 +941,7 @@
                   <Font size="27.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="377.0" layoutY="12.0" prefHeight="39.0" prefWidth="100.0" text="0 - O">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="377.0" layoutY="12.0" prefHeight="39.0" prefWidth="100.0" text="O - 0">
                <font>
                   <Font size="27.0" />
                </font>
