--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -9,10 +9,6 @@ and open the template in the editor.
 */
 @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
 
-#bigGrid {
-    -fx-grid-lines-visible: true;
-}
-
 #bigGrid Line{
     -fx-stroke: #50ff00;
 }
@@ -25,10 +21,11 @@ and open the template in the editor.
     -fx-font-family: 'Luckiest Guy', cursive;
     -fx-text-fill: #50ff00;
 }
-.red-background{
-    -fx-background-color: red;    
-}
 
-.blueBackground{
-    -fx-background-color: blue;
+.button{
+    -fx-text-fill: #50ff00;
+    -fx-font-size: 24;
+    -fx-font-family: 'Luckiest Guy', cursive;
+    -fx-background-radius: 10;
+    -fx-background-color: #000000;
 }
