--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -29,3 +29,11 @@ and open the template in the editor.
     -fx-background-radius: 10;
     -fx-background-color: #000000;
 }
+
+.xbtn{
+    -fx-background-color: red;
+}
+
+.ybtn{
+    -fx-background-color: blue;
+}
