--- a/src/ultimatettt/gui/view/Main.fxml
+++ b/src/ultimatettt/gui/view/Main.fxml
@@ -30,7 +30,7 @@
                      <children>
                         <HBox alignment="CENTER_RIGHT">
                            <children>
-                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="100.0" text="X - 0">
+                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="100.0" style="-fx-text-fill: #00ffff;" text="X - 0" fx:id="xScore">
                                  <font>
                                     <Font size="27.0" />
                                  </font>
@@ -40,7 +40,7 @@
                                     <Font size="27.0" />
                                  </font>
                               </Label>
-                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="100.0" text="O - 0">
+                              <Label fx:id="oScore" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="100.0" style="-fx-text-fill: #50ff00;" text="O - 0">
                                  <font>
                                     <Font size="27.0" />
                                  </font>
@@ -76,7 +76,7 @@
                         <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
-                  <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="500.0">
+                  <GridPane fx:id="microBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="500.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
